unpackaged/main/default/objects/AccountContactRelation/fields/Data_Rollup_Categories__c.field-meta.xml
<CustomField>
    <fullName>Data_Rollup_Categories__c</fullName>
    <label>Data Rollup Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>