unpackaged/main/default/objects/AccountContactRelation/fields/Included_in_Group__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included in Group</label>
    <type>Checkbox</type>
</CustomField>