unpackaged/main/default/objects/AccountContactRelation/fields/Primary_Member__c.field-meta.xml
<CustomField>
    <fullName>Primary_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Member</label>
    <type>Checkbox</type>
</CustomField>